--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dd67650fd16d94391427b0304eacb74a&libraries=services, clusterer, drawing"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
